--- a/app/src/main/res/layout/activity_season.xml
+++ b/app/src/main/res/layout/activity_season.xml
@@ -19,6 +19,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorSurface"
             app:contentInsetStartWithNavigation="0dp"
             app:menu="@menu/ranking_menu"
             app:layout_scrollFlags="scroll|enterAlways"
@@ -29,6 +30,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorSurface"
             android:minHeight="?actionBarSize"
             app:layout_collapseMode="pin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,9 +69,10 @@
         android:id="@+id/seasonView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/recycler_view_background_color"
+        android:layout_marginTop="8dp"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:background="@color/recycler_view_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
