--- a/app/src/main/res/layout/activity_chart_anime.xml
+++ b/app/src/main/res/layout/activity_chart_anime.xml
@@ -29,6 +29,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorSurface"
             android:minHeight="?actionBarSize"
             app:layout_collapseMode="pin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +55,10 @@
         android:id="@+id/animeView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/recycler_view_background_color"
+        android:layout_marginTop="8dp"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
+        android:background="@color/recycler_view_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
