--- a/app/src/main/res/layout/list_sort_dialog.xml
+++ b/app/src/main/res/layout/list_sort_dialog.xml
@@ -57,9 +57,7 @@
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:padding="20dp"
         android:text="CANCEL"
         android:textColor="@color/buttonBlue"
         android:textSize="17sp"
@@ -71,6 +69,7 @@
         android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
