--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -31,6 +31,7 @@
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="scroll|enterAlways"
             app:menu="@menu/profile_fragment_menu"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:title="Profile" />
 
 
