--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,11 +12,14 @@
         <item name="backgroundColor">@color/bgWhite</item>
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/bgWhite</item>
+        <item name="android:statusBarColor">@color/bgWhite</item>
         <!-- Customize your theme here. -->
     </style>
-
-
+    <!-- Base application theme. -->
+    <style name="Base.Theme.Anichan" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    </style>
 
 
 </resources>
