--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="backgroundColor">@color/bgWhite</item>
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
 
         <!-- Customize your theme here. -->
@@ -49,7 +49,7 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -95,13 +95,16 @@
     </style>
 
 
-
-
     <style name="circularImageView" parent="">
         <item name="cornerSize">50%</item>
     </style>
 
     <style name="mal_progress_bar">
         <item name="colorAccent">@color/mal_blue</item>
+    </style>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.Anichan" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 </resources>
