--- a/app/src/main/res/layout/fragment_manga_list.xml
+++ b/app/src/main/res/layout/fragment_manga_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.MangaListFragment">
+    tools:context=".ui.fragments.mangaList.MangaListFragment">
 
 
     <com.google.android.material.appbar.AppBarLayout
